--- a/ide/Dockerfile
+++ b/ide/Dockerfile
@@ -8,6 +8,7 @@ ENV NPM_CONFIG_PREFIX=/home/${DOCKER_USER}/.npm-global \
 RUN sed -i 's/ports.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list \
 	&& sed -i 's/#\ deb-src/deb-src/g' /etc/apt/sources.list \
 	&& apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+		sudo \
 		build-essential \
 		clang \
 		lldb \
@@ -30,6 +31,9 @@ RUN sed -i 's/ports.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.
 		git \
 		global \
 		universal-ctags \
+		ripgrep \
+		ack \
+		tmux \
 	&& curl -sL https://deb.nodesource.com/setup_lts.x | bash - \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install -y \
 		nodejs \
@@ -42,10 +46,13 @@ RUN wget https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-a
 # Add user
 RUN groupadd -r ${DOCKER_USER} -g 1000 \
 	&& useradd -u 1000 -r -g ${DOCKER_USER} -m -d /home/${DOCKER_USER} -s /sbin/nologin -c "${DOCKER_USER}" ${DOCKER_USER} \
-	&& chmod 755 /home/${DOCKER_USER}
+	&& chown -R ${DOCKER_USER} /home/${DOCKER_USER} \
+	&& adduser ${DOCKER_USER} sudo \
+	&& echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Add neovim plugin support
-RUN pip3 install --system pynvim pygments
+RUN pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple \
+	&& pip3 install --system pynvim pygments
 
 # Set the user to use when running this image
 USER ${DOCKER_USER}
